--- a/SushRay2D.vcxproj
+++ b/SushRay2D.vcxproj
@@ -146,7 +146,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Libraries\src\glad.c" />
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="src\ShaderLoader.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="src\ShaderLoader.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="SushRay2D.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Shaders\baseFragShader.frag" />
+    <None Include="Resources\Shaders\baseVertShader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
