--- a/SushRay2D.vcxproj
+++ b/SushRay2D.vcxproj
@@ -146,11 +146,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Libraries\src\glad.c" />
+    <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\ShaderLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\ShaderLoader.h" />
   </ItemGroup>
   <ItemGroup>
