lighting maps finished

--- a/SushRay2D.vcxproj.filters
+++ b/SushRay2D.vcxproj.filters
@@ -69,5 +69,11 @@
     <None Include="Resources\Shaders\lightSourceFragShader.frag">
       <Filter>Resource Files\Shaders</Filter>
     </None>
+    <None Include="Resources\Shaders\textureLightingFragShader.frag">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="Resources\Shaders\textureLightingVertShader.vert">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
