--- a/SushRay2D.vcxproj
+++ b/SushRay2D.vcxproj
@@ -165,6 +165,8 @@
     <None Include="Resources\Shaders\baseLightingVertShader.vert" />
     <None Include="Resources\Shaders\lightSourceFragShader.frag" />
     <None Include="Resources\Shaders\textureFragShader.frag" />
+    <None Include="Resources\Shaders\textureLightingFragShader.frag" />
+    <None Include="Resources\Shaders\textureLightingVertShader.vert" />
     <None Include="Resources\Shaders\textureVertShader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
